# zm11

./: pyproject.toml
11/: 11_README.md  11a.py  11b.py  11c.py  11d.py
13/: 13_README.md  13a.py
src/zm11/: README.md  __init__.py  demo.py  finance words.xlsx  main.py  randam_finance_term.py
